# aleathor

./: .gitignore  .gitmodules  MANIFEST.in  README.md  REUSE.toml  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
.reuse/: dep5
docs/: API.md  ARCHITECTURE.md  CONCEPTS.md  STATUS.md  TUTORIAL.md  index.md
examples/: 01_getting_started.ipynb  02_loading_and_querying.ipynb  03_cell_mutation.ipynb  04_visualization.ipynb  05_advanced.ipynb  06_nuclear_data.ipynb  advanced_surfaces.py  basic_usage.py  materials.py  nucdata.py  plot_geometry.py  plotting_example.py  step_to_mcnp.py
scripts/: generate_docs_assets.py
src/aleathor/: __init__.py  collections.py  geometry.py  io.py  model.py  nucdata.py  plotting.py  slicing.py  surfaces.py
src/aleathor/_binding/: _bind_core.c  _bind_geometry.c  _bind_inspect.c  _bind_io.c  _bind_mesh.c  _bind_module.c  _bind_nucdata.c  _bind_raycast.c  _bind_slice.c  _bind_util.c  _bind_void.c  aleathor_binding.c
tests/: __init__.py  conftest.py  test_counting.py  test_csg_tree.py  test_materials.py  test_model_operations.py  test_module_apis.py  test_nucdata.py  test_plotting.py  test_slice_curves.py  test_slice_grid.py
tests/data/: README.md  boolean_complex.inp  box_rpp.inp  concentric_spheres.inp  cone_z.inp  cylinder_x.inp  cylinder_z.inp  ellipsoid.inp  hemisphere.inp  multi_cylinder.inp  nested_universes.inp  pin_cell.inp  rcc_macrobody.inp  reactor_core.inp  shielding.inp  spallation_target.inp  sphere_offcenter.inp  sphere_simple.inp  torus.inp  trc_macrobody.inp  universe_fill.inp  void_only.inp
