[project]
name = "aleathor"
version = "0.1.0a2"
description = "Constructive Solid Geometry library for nuclear simulations with MCNP export"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.20",
]
authors = [
    { name = "Giovanni MARIANO" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/giovanni-mariano/aleathor"
Repository = "https://github.com/giovanni-mariano/aleathor"
Issues = "https://github.com/giovanni-mariano/aleathor/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
dev = [
    "aleathor[test,docs]",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["aleathor"]
omit = ["*/tests/*"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-win32 *-win_amd64 *-manylinux_i686 *-musllinux_* pp*"
environment = { PORTABLE = "1" }
test-requires = "pytest"
test-command = "pytest {project}/tests -x"
